# Manalyze

./: .clang-format  .gitignore  CMakeLists.txt
include/: config_parser.h  dump.h  import_hash.h  output_formatter.h  portability.h  types.h
include/crypto/: crypto.h  hash.h  types.h
include/manacommons/: base64.h  color.h  escape.h  export.h  output_tree_node.h  threat_level.h
include/manacommons/crypto/: algorithms.h  crypto.h  hash.h
include/manacommons/plugin_framework/: auto_register.h  dynamic_library.h  plugin.h  plugin_interface.h  plugin_manager.h  result.h  threat_level.h
include/manape/: color.h  export.h  imported_library.h  nt_values.h  ordinals.h  pe.h  pe_structs.h  resources.h  section.h  utils.h
manacommons/: base64.cpp  color.cpp  escape.cpp  output_tree_node.cpp
manacommons/crypto/: crypto.cpp  hash.cpp  linux.cpp
manacommons/plugin_framework/: dynamic_library.cpp  plugin_manager.cpp  result.cpp
manape/: imported_library.cpp  imports.cpp  nt_values.cpp  ordinals.cpp  pe.cpp  resources.cpp  section.cpp  utils.cpp
plugins/plugin_virustotal/json_spirit/: json_spirit.vcproj
src/: main.cpp
test/testfiles/manatest2_src/: Resource.rc
